I guess it crashed

--- a/Mid Term/midway_report.bib
+++ b/Mid Term/midway_report.bib
@@ -224,4 +224,29 @@ number={},
 pages={1417 -1423 Vol. 2}, 
 keywords={human body pose estimation;image segmentation;model search space;still images;superpixels;image segmentation;}, 
 doi={10.1109/ICCV.2005.112}, 
-ISSN={1550-5499},}
+ISSN={1550-5499}
+}
+   
+@article{BrostowFC:PRL2008,
+    author = "Gabriel J. Brostow and Julien Fauqueur and Roberto Cipolla",
+    title = "Semantic Object Classes in Video: A High-Definition Ground Truth Database",
+    journal = "Pattern Recognition Letters",
+    volume = "xx",
+    number = "x",   
+    pages = "xx-xx",
+    year = "2008"
+}
+
+@inproceedings{DBLP:conf/iccv/WinnCM05,
+   author    = {John M. Winn and
+                Antonio Criminisi and
+                Thomas P. Minka},
+   title     = {Object Categorization by Learned Universal Visual 
+Dictionary},
+   booktitle = {ICCV},
+   year      = {2005},
+   pages     = {1800-1807},
+   ee        = {http://doi.ieeecomputersociety.org/10.1109/ICCV.2005.171},
+   crossref  = {DBLP:conf/iccv/2005},
+   bibsource = {DBLP, http://dblp.uni-trier.de}
+}
