--- a/FinalReport/final_report.tex
+++ b/FinalReport/final_report.tex
@@ -31,7 +31,7 @@ Adwait Gandhe \\
 \maketitle
 
 \begin{abstract}
-
+Semantic image segmentation is the process of assigning human relevant labels to pixels in an image and is a high level vision problem. Increasing the number of labels increases the complexity of the problem. In this work we attempt a supervised learning approach to solve this problem by training a classifier that helps propagate labels to improve upon a generative prior. We present our results on the 13 class MSRC V1 Dataset.
 \end{abstract}
 
 
