Updated the References

--- a/FinalReport/final_report.bib
+++ b/FinalReport/final_report.bib
@@ -283,3 +283,11 @@ pages={603 -619},
 keywords={Nadaraya-Watson estimator;algorithm performance;analysis resolution;arbitrarily shaped cluster delineation;color images;complex multimodal feature space;computational module;convergence;density function;density modes detection;discontinuity-preserving image smoothing;discrete data;gray-level images;image segmentation;kernel regression;location estimation;low-level vision algorithms;mean shift;nearest stationary point;nonparametric technique;pattern recognition procedure;recursive mean shift procedure;robust M-estimators;robust feature space analysis;user-set parameter;computer vision;estimation theory;image segmentation;nonparametric statistics;pattern clustering;smoothing methods;},
 doi={10.1109/34.1000236},
 ISSN={0162-8828},}
+
+@INPROCEEDINGS{Statistics01randomforests,
+    author = {Leo Breiman Statistics and Leo Breiman},
+    title = {Random Forests},
+    booktitle = {Machine Learning},
+    year = {2001},
+    pages = {5--32}
+}
