Add a few citations of conditional random fields part

--- a/FinalReport/final_report.bib
+++ b/FinalReport/final_report.bib
@@ -291,3 +291,17 @@ ISSN={0162-8828},}
     year = {2001},
     pages = {5--32}
 }
+@article{lafferty2001conditional,
+      title={Conditional random fields: Probabilistic models for segmenting and labeling sequence data},
+        author={Lafferty, J. and McCallum, A. and Pereira, F.C.N.},
+          year={2001}
+}
+
+@online{UGMSoftware,
+    author = {Mark Schmidt},
+    title = {UGM: Matlab code for undirected graphical models},
+    year = 2007,
+    url = \url{http://www.di.ens.fr/~mschmidt/Software/UGM.html},
+    urldate = {30/01/2012}
+}
+
