--- a/FinalReport/final_report.tex
+++ b/FinalReport/final_report.tex
@@ -2,7 +2,7 @@
 \usepackage{nips12submit_e,times}
 \usepackage{amsmath}
 \usepackage{graphicx}
-\usepackage{caption}
+%\usepackage{caption}
 \usepackage{subcaption}
 \usepackage{comment}
 \usepackage{hyperref}
@@ -79,6 +79,7 @@ have similar texture.
 We use the per channel color histogram, color mean and standard deviation
 from the HSV color space.
 \subsubsection{Label Propagation}
+\label{sec:labprop}
 \paragraph{Super pixels and connectivity graph}
 Each image is divided into super pixels at two different scales such that
 the a coarse super pixels align with corresponding finer ones.
@@ -146,6 +147,7 @@ Markov Logic Networks \cite{Domingos06unifyinglogical} \cite{Richardson06markovl
 
 \subsubsection{SVM for Label Propagation}
 We experimented with SVM's in place of random forests and found them to not converge when training on the entire dataset. Training on the nearest neighbors of a test image lead to convergence but the results were too bad to be used.
+
 \subsubsection{Conditional Random Fields}
 Conditional random fields \cite{lafferty2001conditional} are undirected graphical models that can perform inference to compute marginal distributions of label probabilities given features.
 We attempted to use these for generating baseline segmentations using the Ising model with each pixel as a node.
@@ -155,6 +157,7 @@ The maximum aposteriori estimate of label assignments to image pixels always lab
 This was due to a very high unary potential learnt for the corresponding node. 
 We did not pursue this approach due to very high computational requirements.
 Furthermore, loopy belief propogation did not converge after more than 6 hours of training.
+
 \subsection{Adaboost}
 We explored used Adaboost instead of random forests but random forests gave better results on the classification task.
 
@@ -169,21 +172,43 @@ We explored used Adaboost instead of random forests but random forests gave bett
 \subsection{Description of Experiments}
 \label{sec:Description}
 
-We tested our algorithm on the MSRC V1 Dataset \cite{MSRC}, which we randomly into 100 test images and 20 validation images and 100 training images.
+\subsubsection{Cross Validation}
+\label{sec:cross}
+We tested our algorithm on the MSRC V1 Dataset \cite{MSRC}, which we randomly into 100 test images 20 validation images and 100 training images.
 Superpixels and connectivity graphs for all the images were precomputed and stored.
-Then, we performed leave-one-out cross validation to optimize the parameters in the algorithm. These parameters are $k_{bag}$ for the $k$-nearest-neighbor images from which the bag of words model is computed, $k_{hist}$ for the $k$-nearest-neighbor texton histograms from which the distribution $P(Label | feature)$ is generated, $k_{forest}$ for the $k$-nearest-neighbors used by the random forest, and a ratio parameter used to balanced the number true and false edges on the connectivity graph. Due to a lack of computational resources, optimizing these four parameters simultaneously proved intractable. Therefore, the assumption was made that the parameters for the bag-of-words model and the random forest affect the final segmentation independently. 
+Then, we performed leave-one-out cross validation to optimize the parameters in the algorithm.
+These parameters are $k_{bag}$ for the $k$-nearest-neighbor images from which the bag of words model is computed, $k_{hist}$ for the $k$-nearest-neighbor Texton histograms from which the distribution $P(Label | feature)$ is generated, $k_{forest}$ for the $k$-nearest-neighbors used by the random forest, and a ratio parameter used to balanced the number true and false edges on the connectivity graph. 
 
-Figure \ref{fig:pickK} shows the accuracy of the final segmentations with respect to the parameters for the bag of words model. For this test, the parameters for the random forest, the $k$ value and ratio, were set 11 and 0.8 respectively. We chose a set of parameters that produced a high accuracy that also had low first and second derivatives. We believe low derivatives are desirable as they indicate stability and should generalize well to the test set. Consequently, we chose $k_{bag} = 15$, and $k_{hist} = 7$ as these parameters satisfy both of these requirements.
+Due to a lack of computational resources, optimizing these four parameters simultaneously proved intractable. Therefore, the we assumed that the parameters for the bag-of-words model and the random forest affect the final segmentation independently. This assumption is supported by the relative magnitudes by which the parameters affect the accuracy of the semantic segmentation
 
 \begin{figure}[htb]
 \centering
-\includegraphics[width = 0.75\textwidth]{./img/pickK_final}
-\caption{Results from leave-one-out cross validation on the parameters for the bag of words model. The chosen parameters $k_{imgs} = 15$, and $k_{histo} = 7$ are highlighted.}
-\label{fig:pickK}:
+	\begin{subfigure}[t]{0.33\textwidth}
+		\centering
+		\includegraphics[width = \textwidth]{./img/pickK_final}
+		\parbox{.95\textwidth}{\caption{Accuracy versus bag of words model parameters obtained from leave-one-out cross validation. The chosen parameters $k_{imgs} = 15$, and $k_{histo} = 7$ are highlighted. \label{fig:Kbag} }}
+			\end{subfigure}
+	\begin{subfigure}[t]{0.33\textwidth}
+		\centering
+		\includegraphics[width = \textwidth]{./img/kforest}
+		\parbox{0.95\textwidth}{\caption{Accuracy versus $k_{forest}$ obtained from leave-one-out cross validation. $k_{forest} = 9$ was chosen. \label{fig:Kforest}}}
+	\end{subfigure}
+	\begin{subfigure}[t]{0.33\textwidth}
+		\centering
+		\includegraphics[width = \textwidth]{./img/ratio}
+		\parbox{0.95\textwidth}{\caption{Accuracy versus true/false points ratio obtained from leave-one-out cross validation. A ratio  of 0.5 was chosen. \label{fig:ratio}}}
+	\end{subfigure}
 \end{figure}
+
+Figure \ref{fig:Kbag} shows the accuracy of the final segmentations of the validation images with respect to the bag of words model parameters. For this test, the parameters for the random forest, $k_{forest}$ value and ratio, were set 11 and 0.8 respectively. We chose a set of parameters that produced a high accuracy result and also had low first and second derivatives. We believe low derivatives are desirable as they indicate stability and therefore characterize parameters that generalize well to the test data. Consequently, we chose $k_{bag} = 15$, and $k_{hist} = 7$ as these parameters satisfy these properties.
+
+The next parameter we validated was the number of nearest neighbor images on which to train the random forest, $k_{forest}$. Figure \ref{fig:Kforest} shows the result of the leave-one-out cross validation on this parameter. This plot shows that for accuracy is roughly constant for all $k_{forest}$ except for a value of 1, for which it is markedly decreased. While this plot shows no conclusive reason to choose one $k$ value over another, high $k$ values result in more data points and thus should decrease the variability of the results. However, larger values of $k_{forest}$ such as 11 or 13, resulted in unacceptably slow training times. Therefore, we chose $k_{forest} = 9$ as it represented an acceptable compromise between these features.
+
+The last varied parameter was the ratio of sampled true points to false points used in the training data for the random forest. This parameter is vital, as the graph structure proposed in section \ref{sec:labprop} results in a far greater number of same-labeled superpixel pairs than differently-labeled superpixel pairs. Without this parameter, all tested classifiers tended to fit to the positive labeled points almost exclusively, resulting in high precision and recall but near-zero specificity. For our application, this is extremely undesirable, as a false-positive, resulting in the classifier propagating a label when it should not have, can only degrade the segmentation. For high ratio values, (0.8 - 1.2) this same behavior was observed, as suggested in the variability of the plot in this range. We chose a ratio of 0.5 for our final classifier, as it resulted in very high specificity values, and ensured that the label propogation indicator would be conservative. 
 
 
 \subsection{Observations}
+
 \label{sec:Observations}
 
 %------------------------------------------------------------------------------------------
